# elementary-bounties

./: .env.template  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  gh.py  pyproject.toml  run.py  seeder.py  updater.py
.github/workflows/: lint.yml  pylint.yml  test.yml
alembic/: env.py
alembic/versions/: 3960abf8cbad_completed_is_now_state.py  65d8fbca35eb_add_issue_url.py  677c21b65750_init.py  7c187359b8d6_add_issue_number_field.py  82a1e9406037_issue_number_is_now_just_number.py  9350d16deefc_remove_posts.py  b91405b9a94c_add_desc_to_repo.py  e8a62b3e2c01_add_repository_name_to_issue.py
app/: app.py  log.py  main.py  updater.py  utils.py
app/crud/: issues.py  repositories.py
app/db/: models.py  sessions.py
app/db/schemas/: issues.py  posts.py  repositories.py  users.py
app/routers/: index.py  posts.py  repositories.py  users.py  webhooks.py
app/templates/: base.html  hot.html  index.html  repository.html
app/templates/components/: navbar.html
tests/: conftest.py  test_app.py
tests/router/: test_auth.py  test_repositories.py  test_users.py  test_webhooks.py
